# PX4-FlightAxis-Bridge

./: .gitattributes  .gitignore  CONTRIBUTING.md  COPYRIGHT.md  FLIGHTAXIS_PX4_INTEGRATION.md  HITL.md  LICENSE  README-DONT-FORGET.md  README.md  ROS2.md  RUNNING.md  install.sh  mock.pid  uninstall.sh
ROMFS/px4fmu_common/init.d-posix/airframes/: 1200_flightaxis_plane  1201_flightaxis_quad  1202_flightaxis_quadplane  1203_flightaxis_heli  1204_flightaxis_quadplus  1205_flightaxis_hexa  1206_flightaxis_hexaplus  1207_flightaxis_hexacoax  1208_flightaxis_octo  1209_flightaxis_octoplus  1210_flightaxis_octocoax  1211_flightaxis_dodeca  1212_flightaxis_tri  1213_flightaxis_flyingwing  1214_flightaxis_atail  1215_flightaxis_tiltrotor  1216_flightaxis_tailsitter  1217_flightaxis_helicoax
ROMFS/px4fmu_common/init.d/airframes/: 1200_flightaxis_plane.hil  1201_flightaxis_quad.hil  1202_flightaxis_quadplane.hil  1203_flightaxis_heli.hil  1204_flightaxis_quadplus.hil  1205_flightaxis_hexa.hil  1206_flightaxis_hexaplus.hil  1207_flightaxis_hexacoax.hil  1208_flightaxis_octo.hil  1209_flightaxis_octoplus.hil  1210_flightaxis_octocoax.hil  1211_flightaxis_dodeca.hil  1212_flightaxis_tri.hil  1213_flightaxis_flyingwing.hil  1214_flightaxis_atail.hil  1215_flightaxis_tiltrotor.hil  1216_flightaxis_tailsitter.hil  1217_flightaxis_helicoax.hil
Tools/simulation/flightaxis/: hitl_run.sh  sitl_run.sh
Tools/simulation/flightaxis/flightaxis_bridge/: CMakeLists.txt  FA_check.py  get_FAbridge_params.py
Tools/simulation/flightaxis/flightaxis_bridge/models/: atail.json  dodeca.json  flyingwing.json  heli.json  helicoax.json  hexa.json  hexacoax.json  hexaplus.json  octo.json  octocoax.json  octoplus.json  plane.json  quad.json  quadplane.json  quadplus.json  tailsitter.json  tiltrotor.json  tri.json
Tools/simulation/flightaxis/flightaxis_bridge/src/: battery_link.cpp  battery_link.h  fa_communicator.cpp  fa_communicator.h  flightaxis_bridge.cpp  px4_communicator.cpp  px4_communicator.h  vehicle_state.cpp  vehicle_state.h
docs/: realflight-px4-motor-mapping.md
scripts/: detect-px4.sh  sync-from-px4.sh  sync-to-px4.sh
src/modules/simulation/simulator_mavlink/: sitl_targets_flightaxis.cmake
