cmake_minimum_required(VERSION 3.10)

project(flightaxis_bridge)

# FindMAVLink lives in ./cmake (a third-party copy, see COPYRIGHT.md, kept
# in-tree so this does not depend on that submodule being initialised)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

# The ExternalProject registration passes -DCMAKE_BUILD_TYPE=RelWithDebInfo, but
# a direct `cmake .. && make` (how the docs describe manual and multi-instance
# runs, and how HITL is likely driven) would otherwise get an unoptimised build:
# -O0 Eigen quaternion maths and MAVLink encoders show up only as a climbing
# glitches= counter, with no hint that the build type is the cause.
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
	set(CMAKE_BUILD_TYPE "RelWithDebInfo" CACHE STRING "Build type" FORCE)
	message(STATUS "CMAKE_BUILD_TYPE not set, defaulting to ${CMAKE_BUILD_TYPE}")
endif()

find_package(Eigen3 REQUIRED)
find_package(MAVLink)

# PX4's other in-tree bridges leave this un-REQUIRED, which is survivable for
# them because they are only ever configured by the ExternalProject step.
# This bridge also documents a standalone "cmake .. && make" (above, and for
# HITL), and on that path an un-REQUIRED miss is not a clean error: the include
# directory becomes the literal string _MAVLINK_INCLUDE_DIR-NOTFOUND and cmake
# fails at GENERATE time with no mention of MAVLink at all.
#
# FindMAVLink's useful hint is ${CMAKE_CURRENT_BINARY_DIR}/../mavlink/, i.e. the
# headers PX4 generates into build/<config>/mavlink/. So a standalone build must
# be configured from inside that build directory, which is what the ExternalProject
# step does implicitly and what a hand-run cmake in an arbitrary directory does not.
if(NOT MAVLINK_FOUND)
	message(FATAL_ERROR
		"MAVLink headers not found.\n"
		"They are generated by the PX4 build, so build a PX4 target first:\n"
		"    make px4_sitl_default\n"
		"and configure this bridge from inside that build tree, e.g.\n"
		"    cmake -S ${CMAKE_CURRENT_LIST_DIR} -B <PX4>/build/px4_sitl_default/build_flightaxis_bridge\n"
		"FindMAVLink searches <build dir>/../mavlink/ for mavlink_types.h.")
endif()

message(STATUS "${MAVLINK_INCLUDE_DIRS}")

add_executable(flightaxis_bridge
	src/flightaxis_bridge.cpp
	src/px4_communicator.cpp
	src/fa_communicator.cpp
	src/vehicle_state.cpp
	src/geo_mag_declination.cpp
	)

target_include_directories(flightaxis_bridge
	BEFORE
	PUBLIC ${MAVLINK_INCLUDE_DIRS})

target_compile_options(flightaxis_bridge PUBLIC -g -fexceptions -Wno-cast-align -Wno-address-of-packed-member)
target_link_libraries(flightaxis_bridge Eigen3::Eigen pthread)
